--- a/app/package.json
+++ b/app/package.json
@@ -61,7 +61,9 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/leaflet": "^1.7.11",
+    "@types/node": "^25.0.8",
     "eslint": "^8.5.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
